Add the hybrid ngram rule generation in rules folder

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
 flask 
 transformers 
-torch 
+torch
+pandas
+nlu
+sagemaker 
 nltk 
 spacy
 pandas 
 numpy
-mysql-connector-python 
+mysql-connector-python
+pyspark 
 gunicorn
+pyspark
