Add basic routing and webapp index.html

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,12 @@ nltk
 spacy
 pandas 
 numpy
-mysql-connector-python
 pyspark 
 gunicorn
 pyspark
+flask
+
+# For database
+mysql-connector-python
+sqlalchemy
+flask-migrate
