--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 flask 
 transformers 
 torch
-pandas
 nlu
 sagemaker 
 nltk 
@@ -10,9 +9,7 @@ pandas
 numpy
 pyspark 
 gunicorn
-pyspark
-Flask
-TensorFLow
+tensorFLow
 mysql-connector-python
 sqlalchemy
 flask-migrate
