--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
     "python.analysis.extraPaths": [
         "./app",
-        "./model"
+        "./model",
+        "./app",
+        "./app",
+        "./app",
+        "./app"
     ]
 }
