--- a/model/final_tokenizer/tokenizer_config.json
+++ b/model/final_tokenizer/tokenizer_config.json
@@ -698,8 +698,11 @@
   "mask_token": "<mask>",
   "max_length": 1000,
   "model_max_length": 1000000000000000019884624838656,
+  "pad_to_multiple_of": null,
   "pad_token": "<pad>",
+  "pad_token_type_id": 0,
   "padding": "max_length",
+  "padding_side": "right",
   "sep_token": "</s>",
   "stride": 0,
   "tokenizer_class": "RobertaTokenizer",
